 	- Clean dedicated mode spam
 	- Adds dispatch commands for dedicated & automatic users
 	- More development on scoreboards (STILL BETA)
- V 1.35
    - Fix xp bar lols
    - Fix type in the config loader
    - Adds {kickalltohub} command
    - Fixing up some scoreboard bugs
    - fix npe on TAB
    - only broadcast lobby messages to lobby players
    - Adds improved Solid block mode using Duncan's hacky method -.-
    - Fix dedicated broadcast to regex!
    - Update with ProtoclLib dev
    - Adds support for 0 intervals
    - Fix derp in lobby broadcast
    - Adds thread for quick redisguise after solid block
    - Prevent client side block dissapearing
    - Adding metrics
    - Prevent kicking when a player is ontop of a disguised block
    - Fix npe with refresh disguises
    - Fix blow disguises not responding to solid blocks
- V 1.36
    - Mavenize, lets get dev builds :)
    - Add double checks for players still invis
    - Fix broadcast not regexing properly
    - Stop vehicle warping
    - Stop lobby commands
    - Change to list with arena rotator
    - fix kick all to hub
    - Force automatic if dedicated
    - New arena storage
    - Multiworld support for different spawns
    - Added support for pitch and yaw in the different spawns
- V 1.37
    - adds choose-new-seeker-if-original-dies to the config. Stops first seeker ruining by quitting/suiciding
    - Add shop settings, shop currency name, block choices
    - Command ./ph chooser     permission node prophunt.command.chooser. Opens up the block chooser
    - Block chooser is permission based. They must have the permission prophunt.blockchooser.<blockid>  or prophunt.blockchooser.<blockid>-<blockDamage> to choose one!
    - add scoreboardtranslate.yml for trasnlating the scoreboard
    - Change {kickalltohub} command to kickalltohub
    - Add ./ph shop   permission prophunt.command.shop
    - Add vault utils
    - Add sql utils
    - Add Sql database management
    - Fix inventory! Far too long....