@@ -1,0 +1,6 @@
+package me.tomski.enums;
+
+public enum EconomyType {
+    PROPHUNT,
+    VAULT;
+}
