@@ -56,6 +56,9 @@ public enum MessageBank {
     SHOP_CHOSEN_DISGUISE(getCfgMsg("shop_chosen_disguise")),
     NO_BLOCK_CHOICE_PERMISSION(getCfgMsg("no_block_choice_permission")),
     NOT_IN_LOBBY(getCfgMsg("not_in_lobby")),
+    ALREADY_PURCHASED_ITEM(getCfgMsg("already_purchased_item")),
+    NOT_ENOUGH_CURRENCY(getCfgMsg("not_enough_currency")),
+    PURCHASE_COMPLETE(getCfgMsg("purchase_complete")),
 
     SEEKER_SPAWN_SET(getCfgMsg("seeker_spawn_set")),
     HIDER_SPAWN_SET(getCfgMsg("hider_spawn_set")),
